# RT-SEG

./: .gitignore  ANNOTATION_GUIDELINES.md  README.md  pyproject.toml  requirements.txt  run_tui_app_docker.sh
.github/workflows/: publish.yml
data/: example_traces.json  prompts.json
data/label_studio/: label_studio_reasoning_flow_template.xml  ls_data.json
data/tui_css/: app.css  app2.css
docker/: Dockerfile
docs/: _config.yml  core-concepts.md  engines.md  eval.md  extending.md  fusion.md  index.md  installation.md  surrealdb.md  tui.md  tuid.md
docs/engines/: llm-based.md  prob.md  rule-based.md  semantic.md
docs/engines/llm-based/: base-unit.md  offset.md  prm.md  prompting.md
docs/engines/prob/: entropy.md  flatness.md  forced.md  surprisal.md  topk.md
docs/engines/rule-based/: newline.md  rules.md
docs/engines/semantic/: entailment.md  sem-shift.md  topic.md  zero-shot.md
docs/fusion/: fuzzy.md  graph.md  intersect.md  majority.md  merge.md
docs/reproducible/: eval.md  hyperparams.md
notebook/: quick_start.ipynb
src/: dump.py  eval_main.py  evo.py  preload_models.py  seg_main.py  test.py  tui.py  tui2.py
src/eval_utils/: __init__.py  seg_eval_utils.py  seg_labelstudio_utils.py  seg_plot_utils.py
src/rt_seg/: __init__.py
src/rt_segmentation/: __init__.py  base_segmentor.py  bertopic_segmentation.py  entailment.py  late_fusion.py  llm_argument_split.py  llm_reasoning_flow_scheme.py  llm_split.py  llm_split_entropy.py  llm_split_flatness_break.py  llm_split_forced_decoder.py  llm_split_offset.py  llm_split_sent_chunks.py  llm_split_surprisal.py  llm_split_topk.py  llm_thought_anchor_scheme.py  prm_split.py  rt_split.py  rule_split.py  rule_split_newline.py  rule_split_regex.py  sdb_init.py  seg_base.py  seg_eval_utils.py  seg_factory.py  seg_labelstudio_utils.py  seg_plot_utils.py  seg_utils.py  semantic_shift.py  zeroshot_seq_classification.py
